--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
     "@mui/styled-engine-sc": "^6.1.10",
+    "@yudiel/react-qr-scanner": "^2.0.8",
     "aws-amplify": "^6.10.2",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
