--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@yudiel/react-qr-scanner": "^2.0.8",
     "aws-amplify": "^6.10.2",
     "axios": "^1.7.9",
+    "base64-js": "^1.5.1",
     "cra-template": "1.2.0",
     "nodemailer": "^6.9.16",
+    "passkit-generator": "^3.2.0",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
