--- a/amplify/backend/function/SendEmailFunction/src/package.json
+++ b/amplify/backend/function/SendEmailFunction/src/package.json
@@ -13,6 +13,7 @@
   "keywords": [],
   "author": "",
   "dependencies": {
-    "nodemailer": "^6.9.16"
+    "nodemailer": "^6.9.16",
+    "qrcode": "^1.5.4"
   }
 }
