--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -11,8 +11,9 @@
           ],
           "defaultAuthentication": {
             "apiKeyConfig": {
-              "apiKeyExpirationDays": 30,
-              "description": "api key description"
+              "apiKeyExpirationDate": "2025-12-11T02:35:52.665Z",
+              "apiKeyExpirationDays": 365,
+              "description": "staging-graphql"
             },
             "authenticationType": "API_KEY"
           }
